# DynamixelMotorsAPI

./: README.md  extract_torque_curve.py  pyproject.toml  requirements.txt  scraper.py
.github/workflows/: release.yml  scrapeDynamixel.yml
dynamixelmotorsapi/: __init__.py  _dynamixelmotorsconfigs.py  _logging_config.py  _motorgroup.py  dynamixel_configs.json  dynamixelmotors.py
examples/: motors_example.py  motors_multiturn.py
tests/: test_dynamixelmotors.py
